fix: fix visible edit item

--- a/src/components/main/main.module.css
+++ b/src/components/main/main.module.css
@@ -56,6 +56,7 @@
   margin-top: 10px;
   margin-left: 20px;
   display: flex;
+  flex-direction: column;
 }
 
 .hidden {
